<resources>
    <string name="app_name">AiroportApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="authorize">Авторизоваться</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="login">Эл. почта</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="not_acc">Нет аккаунта?</string>
    <string name="registration_1">Зарегистрируйтесь</string>
    <string name="enter_with">Войти при помощи</string>
    <string name="invent_login">Введите эл. почту</string>
    <string name="invent_pass">Придумайте пароль</string>
</resources>